# few-shot-video-tsum

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml
scripts/: build_rag.py  download_videos.py  evaluate_results.py  generate_embeddings.py  init_db.py  load_embeddings_to_db.py
src/: env.py  gen_distant_few_shot_summary.py  gen_few_shot_summary.py  gen_random_few_shot_summary.py  gen_zero_shot_summary.py
src/metrics/: metrics.py
src/rag/: operations.py
src/rag/db/: conn.py
src/retrieval/: operations.py
src/retrieval/db/: ddl.sql
src/tsummarizer/: base.py  gemini.py
src/tsummarizer/schema/: gemini.py
src/video_encoder/: dinov3.py
